<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/account_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="4dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent" >

        <TextView
            android:id="@+id/balance_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/on_account"
            android:textSize="20sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/balance_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="4dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            tools:text="123 eth" />

        <Button
            android:id="@+id/withdraw_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="16dp"
            android:layout_marginStart="20dp"
            android:minHeight="50dp"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/withdraw"
            android:onClick="onClickWithdraw"
            app:layout_constraintStart_toEndOf="@+id/balance_value_tv" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/divider_ll"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:orientation="vertical"
        android:background="@color/colorPrimaryTransparent"
        app:layout_constraintTop_toBottomOf="@+id/account_ll" />

    <TextView
        android:id="@+id/no_payers_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/no_payers"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/divider_ll" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/payers_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/divider_ll" />

</androidx.constraintlayout.widget.ConstraintLayout>